[package]
name = "tensor-eigen"
version = "0.0.5"
edition = "2021"
description = "Utility CLI for the Tensor Foundation Solana programs."
repository = "https://github.com/tensor-foundation/eigen"
license = "Apache-2.0"


[[bin]]
name = "eigen"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
borsh = { version = "0.10" }
chrono = "0.4.38"
clap = { version = "4.5", features = ["derive"] }
console = "0.15.8"
dirs = "5.0.1"
hex = "0.4.3"
indexmap = { version = "2.1.0", features = ["serde"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = "1.0.193"
serde_json = "1.0.108"
serde_with = "3.4.0"
serde_yaml = "0.9.27"
sha2 = "0.10.8"
solana-account-decoder = ">=1.16, <2.0"
solana-client = ">=1.16, <2.0"
solana-logger = ">=1.16, <2.0"
solana-program = ">=1.16, <2.0"
solana-sdk = ">=1.16, <2.0"
tensor-amm = { version = "0.7.0", features = ["serde"] }
tensor-marketplace = { version = "0.5.0", features = ["serde"] }
tensor-price-lock = "0.2.0"
tensor-whitelist = { version = "0.2.0", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
